JumpScript/tests/baselines/reference/generatorOverloads3.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorOverloads3.jump(2,5): error TS1222: An overload signature cannot be declared as a generator.
tests/cases/conformance/es6/yieldExpressions/generatorOverloads3.jump(3,5): error TS1222: An overload signature cannot be declared as a generator.


==== tests/cases/conformance/es6/yieldExpressions/generatorOverloads3.jump (2 errors) ====
    class C {
        *f(s: string): Iterable<any>;
        ~
!!! error TS1222: An overload signature cannot be declared as a generator.
        *f(s: number): Iterable<any>;
        ~
!!! error TS1222: An overload signature cannot be declared as a generator.
        *f(s: any): Iterable<any> { }
    }